# NT-Projects

./: LICENSE  NTENV.lnk  README.md  Visual Studio Envs.txt  microsoft.xml  ntuser.cmd
INCLUDE/: AclUI.h  ActivScp.Idl  ActivScp.h  AeroStyle.xml  AudioEngineEndpoint.h  AuthZ.h  BiDiSpl.h  Bits.h  Bits3_0.h  BitsMsg.h  BluetoothAPIs.h  CDOSys.h  CDOSysErr.h  CDOSys_I.c  CertAdm.Idl  CertAdm.h  CertBase.Idl  CertBase.h  CertCli.Idl  CertCli.h  CertEnc.h  (+514 more)
NET/msripv6/ip/pdcurses/: INSTALL  Makefile.in  README  TODO  config.guess  config.h.in  configure  configure.in  cursos2.h  curspriv.h  maintain.er  pdcurses-2_3b-win32.patch  pdcurses.h  readme.20  readme.21  readme.22  x11.h
NET/msripv6/ip/pdcurses/demos/: Makefile.in  firework.c  newdemo.c  ptest.c  testcurs.c  tui.c  tui.h  tuidemo.c  xmas.c
NET/msripv6/ip/pdcurses/doc/: intro.man  latin-1.man  overview.man  x11.man
NET/msripv6/ip/pdcurses/dos/: bccdos.lrf  bccdos.mak  gccdos.lrf  gccdos.mak  mscdos.mak  msvcdos.mak  pdcdisp.c  pdcgetsc.c  pdcgo32.c  pdckbd.c  pdcprint.c  pdcscrn.c  pdcsetsc.c  wccdos16.mak  wccdos4g.mak
NET/msripv6/ip/pdcurses/flexos/: README  fo_16bit.c  fo_8bit.c  fo_gname.c  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcprint.c  pdcscrn.c  pdcsetsc.c
NET/msripv6/ip/pdcurses/os2/: gccos2.mak  iccos2.lrf  iccos2.mak  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcprint.c  pdcscrn.c  pdcsetsc.c  pdcurses.def  pdcurses.lnk  wccos2.lrf  wccos2.mak
NET/msripv6/ip/pdcurses/panel/: panel.c
NET/msripv6/ip/pdcurses/pdcurses/: Makefile.in  README  addch.c  addchstr.c  addstr.c  attr.c  beep.c  bkgd.c  border.c  clear.c  color.c  delch.c  deleteln.c  getch.c  getstr.c  getyx.c  inch.c  inchstr.c  initscr.c  inopts.c  insch.c  insstr.c  instr.c  kernel.c  mouse.c  move.c  outopts.c  overlay.c  pad.c  pdcdebug.c  pdcutil.c  pdcwin.c  printw.c  refresh.c  scanw.c  scroll.c  slk.c  termattr.c  terminfo.c  touch.c  (+2 more)
NET/msripv6/ip/pdcurses/saa/: Makefile.in
NET/msripv6/ip/pdcurses/tools/: Makefile.in  manext.c
NET/msripv6/ip/pdcurses/win32/: README  bccwin32.mak  gccwin32.mak  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcprint.c  pdcscrn.c  pdcsetsc.c  vcwin32.mak  w95-bcc.rsp  wccwin32.mak
NET/msripv6/ip/pdcurses/x11/: README  XCurses.def  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcprint.c  pdcscrn.c  pdcsetsc.c  x11.c  xcurs32.xbm  xcurs64.xbm
(+3038 files in other folders)
